fix: remove overriding left property from floating controls wrapper to fix rightward shift bug

--- a/style.css
+++ b/style.css
@@ -684,9 +684,6 @@ input:focus {
 
 
 #floating-controls-wrapper {
-    position: fixed;
-    top: 5.5rem;
-    left: 1.5rem;
     z-index: 40;
     display: flex;
     flex-direction: row;
